Type select list + added ImageName attribute

--- a/INET2005_FinalProject/Pages/CarPages/Create.cshtml
+++ b/INET2005_FinalProject/Pages/CarPages/Create.cshtml
@@ -34,6 +34,12 @@
                 <span asp-validation-for="Car.Color" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="form-check-label">Type: </label>
+                <select asp-for="Car.CarType.CarTypeID" asp-items="Model.CarTypeList" class="form-control">
+                    <option value="">-- SELECT TYPE --</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Car.Price" class="control-label"></label>
                 <input asp-for="Car.Price" class="form-control" />
                 <span asp-validation-for="Car.Price" class="text-danger"></span>
