--- a/INET2005_FinalProject/Pages/CarPages/Create.cshtml
+++ b/INET2005_FinalProject/Pages/CarPages/Create.cshtml
@@ -14,6 +14,10 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label class="control-label">Photo</label>
+                <input type=file asp-for="ImageUpload" class="form-control" />
+            </div>
+            <div class="form-group">
                 <label asp-for="Car.Name" class="control-label"></label>
                 <input asp-for="Car.Name" class="form-control" />
                 <span asp-validation-for="Car.Name" class="text-danger"></span>
