--- a/INET2005_FinalProject/Pages/CarPages/Details.cshtml
+++ b/INET2005_FinalProject/Pages/CarPages/Details.cshtml
@@ -45,5 +45,5 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Car?.CarID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./CarList">Back to List</a>
 </div>
