--- a/INET2005_FinalProject/Pages/CarTypePages/Delete.cshtml
+++ b/INET2005_FinalProject/Pages/CarTypePages/Delete.cshtml
@@ -23,6 +23,6 @@
     <form method="post">
         <input type="hidden" asp-for="CarType.CarTypeID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./CarTypeList">Back to List</a>
     </form>
 </div>
