--- a/INET2005_FinalProject/Pages/Admin/Login.cshtml
+++ b/INET2005_FinalProject/Pages/Admin/Login.cshtml
@@ -2,3 +2,21 @@
 @model INET2005_FinalProject.Pages.Admin.LoginModel
 @{
 }
+
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div class="form-group">
+                <label class="control-label">Username</label>
+                <input class="form-control" name="username" />
+            </div>
+            <div class="form-group">
+                <label class="control-label">Password</label>
+                <input class="form-control" name="password" />
+            </div>
+            <div class="mb-3">
+                <input type="submit" value="Login" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
