--- a/INET2005_FinalProject/Pages/CarPages/Delete.cshtml
+++ b/INET2005_FinalProject/Pages/CarPages/Delete.cshtml
@@ -47,6 +47,6 @@
     <form method="post">
         <input type="hidden" asp-for="Car.CarID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./CarList">Back to List</a>
     </form>
 </div>
