--- a/INET2005_FinalProject/Pages/CarTypePages/Create.cshtml
+++ b/INET2005_FinalProject/Pages/CarTypePages/Create.cshtml
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="CarTypeList">Back to List</a>
 </div>
 
 @section Scripts {
