--- a/INET2005_FinalProject/Pages/CarTypePages/Details.cshtml
+++ b/INET2005_FinalProject/Pages/CarTypePages/Details.cshtml
@@ -21,5 +21,5 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.CarType?.CarTypeID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./CarTypeList">Back to List</a>
 </div>
