--- a/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
+++ b/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item d-flex ms-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/CarPages/CarList"> Manage Cars</a>
+                            </li>
+                            <li class="nav-item d-flex">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/CarTypePages/CarTypeList"> Manage Types</a>
+                            </li>
+                            <li class="nav-item d-flex">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Logout">Logout</a>
+                            </li>
+                        }
+                        else 
+                        {
+                            <li class="nav-item d-flex ms-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Login">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
