--- a/INET2005_FinalProject/Pages/CarPages/Details.cshtml
+++ b/INET2005_FinalProject/Pages/CarPages/Details.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    string imageURL = "https://" + Request.Host.Value + "/photos/" + Model.Car.ImageName;
 }
 
 <h1>Details</h1>
@@ -10,6 +11,7 @@
 <div>
     <h4>Car</h4>
     <hr />
+    <img class="mw-100" src="@imageURL" />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Car.Name)
@@ -22,6 +24,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Car.BrandName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Car.CarType.TypeName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Car.CarType.TypeName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Car.ModelYear)
