Fixed edit page (still can't edit images)

--- a/INET2005_FinalProject/Pages/CarPages/CarList.cshtml
+++ b/INET2005_FinalProject/Pages/CarPages/CarList.cshtml
@@ -22,8 +22,7 @@
                     <img src="@imageURL" height="200" />
                 </td>
                 <td class="align-middle text-center">
-                    <h3>@item.ModelYear @item.Name</h3>
-                    <i>"@item.BrandName"</i> <br />
+                    <h3>@item.ModelYear @item.BrandName @item.Name</h3>
                     <b>Type: </b> @item.CarType.TypeName <br />
                     <b>Price: </b> @item.Price <br />
                 </td>
