--- a/INET2005_FinalProject/Pages/Admin/Login.cshtml
+++ b/INET2005_FinalProject/Pages/Admin/Login.cshtml
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Password</label>
-                <input class="form-control" name="password" />
+                <input type="password" class="form-control" name="password" />
             </div>
             <div class="mb-3">
                 <input type="submit" value="Login" class="btn btn-primary" />
