--- a/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
+++ b/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-black border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Big Bill Cars</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,21 +20,21 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item d-flex ms-auto">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/CarPages/CarList"> Manage Cars</a>
+                                <a class="nav-link text-light" asp-area="" asp-page="/CarPages/CarList"> Manage Cars</a>
                             </li>
                             <li class="nav-item d-flex">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/CarTypePages/CarTypeList"> Manage Types</a>
+                                <a class="nav-link text-light" asp-area="" asp-page="/CarTypePages/CarTypeList"> Manage Types</a>
                             </li>
                             <li class="nav-item d-flex">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Logout">Logout</a>
+                                <a class="nav-link text-light" asp-area="" asp-page="/Admin/Logout">Logout</a>
                             </li>
                         }
                     </ul>
