--- a/INET2005_FinalProject/Pages/Index.cshtml
+++ b/INET2005_FinalProject/Pages/Index.cshtml
@@ -46,7 +46,7 @@
         // Concatenate image url
         string imageURL = "https://" + Request.Host.Value + "/photos/" + Model.Car[i].ImageName;
 
-        <div class="col-xl-3 my-1 mx-1 bg-light rounded text-center card-hover position-relative">
+        <div class="col-md-3 my-1 mx-1 bg-light rounded text-center card-hover position-relative">
             <div class="my-2" style="width: 100%; height: 0; padding-bottom: 100%; position: relative;">
                 <img src="@imageURL" style="object-fit: cover;width: 100%; height: 100%; position: absolute; top: 0; left: 0;" />
              </div>
