--- a/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
+++ b/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/ShoppingCart">Cart</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
