--- a/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
+++ b/INET2005_FinalProject/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/INET2005_FinalProject.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
 </head>
 <body>
     <header>
@@ -19,11 +20,13 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/ShoppingCart">Cart</a>
+                        <li class="nav-item">   
+                            <a class="bi bi-bag-fill h3" style="color: white; vertical-align: bottom; vertical-align: bottom; position: relative;" asp-page="/ShoppingCart"></a>
+                            @if (Context.Request.Cookies["ShoppingCart"] != null)
+                            {
+                                string[] cartItems = Context.Request.Cookies["ShoppingCart"].Split(",");
+                                <div class="badge" style="background-color: red; border-radius: 25px; position: absolute;"><b>@cartItems.Count()</b></div>
+                            }
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
